Stretch pre-cards fixes OpenBudget/BudgetKey#297

--- a/src/app/horizontal-results/horizontal-results.component.less
+++ b/src/app/horizontal-results/horizontal-results.component.less
@@ -46,9 +46,9 @@
             width: 100%;
 
             .precard {
-                display: block;
+                display: flex;
                 width: 240px;
-                height: 120px;
+                align-self: stretch;
                 flex: 0 0 auto;
                 margin: 16px 16px 16px 8px;
                 border-radius: 4px;
